# cs-study-autotool

./: ChangeLog  LICENSE  Makefile.am  README.md  auto-build.sh  build-sample.sh  configure.ac  libstylSheet.pc.in
data/: env_noinslibary.in
examples/: Makefile.am  cStylSheelExample.c
package/mingw32-packages/: glib-2.33.8-binwin32.7z  setup_mingw.sh
package/nsis_data/: license.txt  setup.nsi
src/: .cproject  .project  Makefile.am  cStylSheet.c  cStylSheet.h
